# Sudoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Analyzer/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  Candidates.cpp  Candidates.h  Hidden.cpp  Hidden.h  Link.cpp  Link.h  LockedCandidates.cpp  LockedCandidates.h  Naked.cpp  Naked.h  SimpleColoring.cpp  SimpleColoring.h  UniqueRectangle.cpp  UniqueRectangle.h  XCycle.cpp  XCycle.h  XWing.cpp  XWing.h  XYWing.cpp  XYWing.h  YWing.cpp  YWing.h
Board/: Board.cpp  Board.h  CMakeLists.txt
Generator/: CMakeLists.txt  Generator.cpp  Generator.h
Solver/: CMakeLists.txt  Solver.cpp  Solver.h
generate/: CMakeLists.txt  generate.cpp
profile/: CMakeLists.txt  main.cpp
rate/: CMakeLists.txt  rate.cpp
solve/: CMakeLists.txt  solve.cpp
sudoku/: CMakeLists.txt  main.cpp
suggest/: CMakeLists.txt  suggest.cpp
test/: CMakeLists.txt  test-Analyzer_Analyzer.cpp  test-Analyzer_Candidates.cpp  test-Analyzer_Hidden.cpp  test-Analyzer_Link.cpp  test-Analyzer_LockedCandidates.cpp  test-Analyzer_Naked.cpp  test-Analyzer_SimpleColoring.cpp  test-Analyzer_UniqueRectangle.cpp  test-Analyzer_XCycle.cpp  test-Analyzer_XWing.cpp  test-Analyzer_XYWing.cpp  test-Board_Board.cpp  test-Generator_Generator.cpp  test-Solver_Solver.cpp
tests/: CMakeLists.txt  main.cpp
tutor/: CMakeLists.txt
